--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=canchaya
+DB_USERNAME=canchaya_user
+DB_PASSWORD=mapamagico
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
